# chip8

./: Cargo.toml
chip8_core/: Cargo.toml
chip8_core/src/: lib.rs
desktop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/web/: index.js  wasm.js  wasm_bg.wasm
