[package]
name = "chip8_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = { version = "0.7.3", features = ["wasm-bindgen"] }
rand = {version = "0.8.5",features = ["getrandom"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }